handle Ctrl+C in terminal input

--- a/packages/harness/public/index.html
+++ b/packages/harness/public/index.html
@@ -308,6 +308,10 @@
             }
             return
           }
+        } else if (e === '\u0003') {
+          // Ctrl+C
+          term.write('^C\r\n$ ')
+          buffer = ''
         } else if (e >= ' ' && e <= '~') {
           // Printable
           buffer += e
